hphp/test/slow/libxml/safe-trees/append_invalid.php.expectf

Fatal error: Uncaught exception 'DOMException' with message 'Wrong Document Error' in %s/append_invalid.php:12
Stack trace:
#0 %s/append_invalid.php(12): DOMNode->appendChild()
#1 {main}
